service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  type: NodePort
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
