ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health/
  name: k8s-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: k8s-service
            port:
              number: 8000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: k8s-service
            port:
              number: 8000
      - path: /otusapp/.*/health
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8s-service
            port:
              number: 8000
